# webshart

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: aspect_bucketing.py  asyncio_discovery.py  asyncio_download.py  dataloader.py  dataloader_with_bucketing.py  dataloader_with_separate_metadata.py  dataloader_with_slow_connection.py  dataset_stats.py  metadata_extractor.py  retrieve_range.py
python/webshart/: __init__.py  cache_wait.py
src/: aspect_buckets.rs  batch.rs  dataloader.rs  discovery.rs  error.rs  extract.rs  lib.rs  metadata.rs  metadata_resolver.rs  streaming.rs
src/dataloader/: aspect_buckets.rs  batch.rs  cached_file_loader.rs  config.rs  entry_types.rs  file_loading.rs  shard_cache.rs
tests/: test_aspect_bucketing.py  test_bucket_dataloader.py  test_dataloader_range_iteration.py  test_dataloader_state_dict.py  test_dataset_stats.py  test_dataset_streaming.py  test_discovery.py  test_metadata.py  test_metadata_caching.py  test_nonblocking_ctx_dataloader.py  test_smoke.py
