[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "webshart"
version = "0.4.0"
description = "Fast and memory-efficient webdataset shard reader"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "bghira", email = "bghira@users.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["dataset", "shards", "tar", "webdataset", "machine-learning"]

[project.scripts]
webshart = "webshart:main"

[project.urls]
Homepage = "https://github.com/bghira/webshart"
Repository = "https://github.com/bghira/webshart"
Issues = "https://github.com/bghira/webshart/issues"

[tool.maturin]
python-source = "python"
module-name = "webshart._webshart"

